--- a/module2solution/css/stylesheet.css
+++ b/module2solution/css/stylesheet.css
@@ -1,4 +1,3 @@
-
 /*****Base style****/
 * {
 	box-sizing: border-box;
@@ -33,6 +32,8 @@ p:nth-child(1) {
 	float: right;
 	border: 1px solid black;
 	font-size: 1.25em;
+  padding-right: 5px;
+  padding-left: 5px;
 
 }
 
